feat: Adding new work experience, new language, new feedback, modify profile picture, modify descripcion, modify salary, modify social media modals.

--- a/Front/Banco-de-Talentos/src/app/features/talent/new-talent/new-talent.component.html
+++ b/Front/Banco-de-Talentos/src/app/features/talent/new-talent/new-talent.component.html
@@ -70,7 +70,7 @@
                 </div>
                 <div>
                     <h3>Puesto actual</h3>
-                    <p-dropdown [options]="puestos" placeholder="Puesto Actual" optionLabel="name" [showClear]="true"></p-dropdown>
+                    <p-dropdown [options]="puestos" placeholder="Puesto Actual" optionLabel="name" [showClear]="true" appendTo="body"></p-dropdown>
                 </div>
                 <div class="pt-1">
                     <h3>Medios Sociales</h3>
@@ -157,9 +157,9 @@
                 <div class="pb-5">
                     <h3>Idiomas</h3>
                     <p>Idioma</p>
-                    <p-dropdown [options]="idiomas" placeholder="Nombre del idioma" optionLabel="name" [showClear]="true"></p-dropdown>
+                    <p-dropdown [options]="idiomas" placeholder="Nombre del idioma" optionLabel="name" [showClear]="true" appendTo="body"></p-dropdown>
                     <p>Nivel</p>
-                    <p-dropdown [options]="niveles" placeholder="Nivel del idioma" optionLabel="name" [showClear]="true"></p-dropdown>
+                    <p-dropdown [options]="niveles" placeholder="Nivel del idioma" optionLabel="name" [showClear]="true" appendTo="body"></p-dropdown>
                     <div class="pt-4">
                         <p-rating></p-rating>
                     </div>
