--- a/Front/Banco-de-Talentos/src/app/shared/components/feedback-crd/feedback-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/feedback-crd/feedback-crd.component.html
@@ -4,14 +4,6 @@
       <div class="flex align-items-center justify-content-center">
         <span class="text-base font-medium">Feedback</span>
       </div>
-      <div class="flex align-items-center justify-content-center">
-        <button
-          pButton
-          pRipple
-          icon="pi pi-plus"
-          class="p-button-rounded p-button-secondary p-button-text p-button-sm"
-        ></button>
-      </div>
     </div>
 
     <div class="border-round-sm">
@@ -57,10 +49,60 @@
       </div>
     </div>
     <div class="flex align-items-center">
-      <span class="custom-cursor" (click)="handleClick()">
+      <span class="custom-cursor" (click)="openNewFeedbackDialog()">
         <i class="pi pi-pencil"></i>
         <span class="text-sm"> Dar nuevo feedback</span>
       </span>
     </div>
   </div>
 </div>
+
+<p-dialog
+  [(visible)]="newFeedbackDialog"
+  [modal]="true"
+  [closable]="false"
+  [style]="{ width: '650px' }"
+>
+  <ng-template pTemplate="header">
+    <div class="flex flex-column">
+      <div class="flex align-items-start justify-content-start h-3rem">
+        <h2>Agrega nuevo feedback</h2>
+      </div>
+      <div class="flex align-items-start justify-content-start h-2rem">
+        <p>Agrega un nuevo puntaje y escribe un comentario.</p>
+      </div>
+    </div>
+  </ng-template>
+  <div>
+    <div class="pt-4">
+        <p-rating></p-rating>
+    </div>
+    <div class="h-7rem">
+      <p>Feedback</p>
+      <input pInputText placeholder="Escribe un comentario" class="w-full h-5rem"/>
+    </div>
+  </div>
+  <ng-template pTemplate="footer">
+    <div class="formgrid grid">
+      <div class="field col">
+        <button
+          pButton
+          pRipple
+          label="Cancelar"
+          icon="pi pi-times"
+          class="p-button-outlined p-button-info w-full"
+          (click)="hideNewFeedbackDialog()"
+        ></button>
+      </div>
+      <div class="field col">
+        <button
+          pButton
+          pRipple
+          label="Agregar"
+          icon="pi pi-check"
+          class="p-button-success w-full"
+        ></button>
+      </div>
+    </div>
+  </ng-template>
+</p-dialog>
