--- a/Front/Banco-de-Talentos/src/app/shared/components/lang-pers-crd/lang-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/lang-pers-crd/lang-pers-crd.component.html
@@ -10,6 +10,7 @@
           pRipple
           icon="pi pi-plus"
           class="p-button-rounded p-button-secondary p-button-text p-button-sm"
+          (click)="openNewLanguageDialog()"
         ></button>
       </div>
     </div>
@@ -57,3 +58,53 @@
     </div>
   </div>
 </div>
+
+<p-dialog
+  [(visible)]="newLanguageDialog"
+  [modal]="true"
+  [closable]="false"
+  [style]="{ width: '650px' }"
+>
+  <ng-template pTemplate="header">
+    <div class="flex flex-column">
+      <div class="flex align-items-start justify-content-start h-3rem">
+        <h2>Agrega una nuevo idioma</h2>
+      </div>
+      <div class="flex align-items-start justify-content-start h-2rem">
+        <p>Agrega un nuevo idioma aprendido.</p>
+      </div>
+    </div>
+  </ng-template>
+  <div>
+    <p>Idioma</p>
+    <p-dropdown [options]="languages" placeholder="Nombre del idioma" optionLabel="name" [showClear]="true" appendTo="body"></p-dropdown>
+    <p>Nivel</p>
+    <p-dropdown [options]="levels" placeholder="Nivel del idioma" optionLabel="name" [showClear]="true" appendTo="body"></p-dropdown>
+    <div class="pt-4">
+        <p-rating></p-rating>
+    </div>
+  </div>
+  <ng-template pTemplate="footer">
+    <div class="formgrid grid">
+      <div class="field col">
+        <button
+          pButton
+          pRipple
+          label="Cancelar"
+          icon="pi pi-times"
+          class="p-button-outlined p-button-info w-full"
+          (click)="hideNewLanguageDialog()"
+        ></button>
+      </div>
+      <div class="field col">
+        <button
+          pButton
+          pRipple
+          label="Agregar"
+          icon="pi pi-check"
+          class="p-button-success w-full"
+        ></button>
+      </div>
+    </div>
+  </ng-template>
+</p-dialog>
