feat: Improve responsive design

--- a/Front/Banco-de-Talentos/src/app/features/dashboard/list/list.component.html
+++ b/Front/Banco-de-Talentos/src/app/features/dashboard/list/list.component.html
@@ -1,6 +1,6 @@
 <shared-control-panel></shared-control-panel>
 
-<div class="bg-white py-0 px-3 sm:px-6 shadow-3 content">
+<div class="bg-white py-0 px-3 sm:px-6 shadow-none content">
   <div class="flex flex-wrap border-round w-full">
     <div
       class="content w-12 sm:w-4 font-bold py-1 px-2 flex justify-content-center"
@@ -16,7 +16,9 @@
     <div
       class="content bg-white w-12 sm:w-8 font-bold p-2 flex justify-content-center sm:justify-content-start"
     >
-      <div class="w-full">
+      <div
+        class="w-full shadow-8 md:shadow-4 text-center border-round-lg surface-overlay"
+      >
         <p-scrollPanel
           [style]="{ width: '100%', height: 'calc(100vh - 190px)' }"
         >
